package nl.hu.cisq1.lingo.words.domain;

    public enum Mark
    {
        INVALID,
        ABSENT,
        PRESENT,
        CORRECT
    }